--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,21 @@
 {
-    "manifest_version": 3,
-    "name": "X-Feed Cleaner",
-    "version": "1.0",
-    "description": "A Chrome extension to remove only the home feed on X.com (formerly Twitter) for a cleaner experience.",
-    "permissions": [
-      "activeTab",
-      "scripting"
-    ],
-    "content_scripts": [
-      {
-        "matches": ["https://x.com/*", "https://twitter.com/*"],
-        "js": ["hideFeed.js"],
-        "run_at": "document_idle"
-      }
-    ],
-    "icons": {
+  "manifest_version": 3,
+  "name": "X-Feed Cleaner",
+  "version": "1.0",
+  "description": "A Chrome extension to remove only the home feed on X.com (formerly Twitter) for a cleaner experience.",
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
       "16": "logo.png",
       "48": "logo.png",
       "128": "logo.png"
     }
-  }
-  
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://x.com/*", "https://twitter.com/*"],
+      "js": ["hideFeed.js"]
+    }
+  ],
+  "permissions": ["storage"]
+}
