Implemented function to autoclick to "following" page

--- a/manifest.json
+++ b/manifest.json
@@ -14,9 +14,7 @@
   "content_scripts": [
     {
       "matches": ["https://x.com/*", "https://twitter.com/*"],
-      "js": [
-        "cheatBlocker.js",
-        "main.js"]
+      "js": ["cheatBlocker.js", "trackingTime.js", "autoclickOnce.js", "main.js"]
     }
   ],
   "permissions": ["storage"]
