Added different image sizes + Buymeacoffee link adjustments

--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
   "manifest_version": 3,
   "name": "X-Feed Cleaner",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "description": "A Chrome extension to remove only the home feed on X.com (formerly Twitter) for a cleaner experience.",
   "action": {
-    "default_popup": "popup.html",
-    "default_icon": {
-      "16": "logo.png",
-      "48": "logo.png",
-      "128": "logo.png"
-    }
+    "default_popup": "popup.html"
+  },
+  "icons": {
+    "16": "logo16.png",
+    "48": "logo48.png",
+    "128": "logo128.png"
   },
   "content_scripts": [
     {
@@ -29,7 +29,7 @@
       ]
     }
   ],
-  "background":{
+  "background": {
     "service_worker": "background.js"
   },
   "permissions": ["storage"]
