--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "X-Feed Cleaner",
   "version": "1.0.17",
-  "description": "A Chrome extension to remove only the home feed on X.com (formerly Twitter) for a cleaner experience.",
+  "description": "📽️ **Keep Focused, Stay Productive** Removes distracting elements inside X.com (formerly Twitter) for a cleaner experience.",
   "action": {
     "default_popup": "popup.html"
   },
